# ulco_agents_IA

./: 01-template_rag_simple.ipynb  02-template_initiation_langgraph.ipynb  03-template_first_agent.ipynb  04-bonus-rag_agent_bonus.ipynb  04-template_rag_agent.ipynb  README.md  pyproject.toml
docs/: avis_clients.md  business_plan_2025_2027.md  plaquette_commerciale.md  resultats_financiers_2025.md  team.csv
documents_projet/: README_documents_projet.txt  semaine_01_2025-03-01_2025-03-07.txt  semaine_02_2025-03-08_2025-03-14.txt  semaine_03_2025-03-15_2025-03-21.txt  semaine_04_2025-03-22_2025-03-28.txt  semaine_05_2025-03-29_2025-04-04.txt  semaine_06_2025-04-05_2025-04-11.txt  semaine_07_2025-04-12_2025-04-18.txt  semaine_08_2025-04-19_2025-04-25.txt  semaine_09_2025-04-26_2025-05-02.txt  semaine_10_2025-05-03_2025-05-09.txt  semaine_11_2025-05-10_2025-05-16.txt  semaine_12_2025-05-17_2025-05-23.txt  semaine_13_2025-05-24_2025-05-30.txt  semaine_14_2025-05-31_2025-06-06.txt  semaine_15_2025-06-07_2025-06-13.txt  semaine_16_2025-06-14_2025-06-20.txt  semaine_17_2025-06-21_2025-06-27.txt  semaine_18_2025-06-28_2025-07-04.txt  semaine_19_2025-07-05_2025-07-11.txt  semaine_20_2025-07-12_2025-07-18.txt  semaine_21_2025-07-19_2025-07-25.txt  semaine_22_2025-07-26_2025-08-01.txt  semaine_23_2025-08-02_2025-08-08.txt  semaine_24_2025-08-09_2025-08-15.txt  semaine_25_2025-08-16_2025-08-22.txt
